--- a/HTML/countries.html
+++ b/HTML/countries.html
@@ -27,7 +27,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="athletes.html"><i
                                 class="fa fa-user-o text-warning"></i> Athletes</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="competitions.html"><i
@@ -38,8 +38,6 @@
                                 class="fa fa-map-marker text-success"></i> Games</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="modalities.html"><i
                                 class="fa fa-soccer-ball-o text-primary"></i> Modalities</a></li>
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href="favoritos.html"><i
-                                class="fa fa-heart-o text-danger"></i> Favorites</a></li>
                 </ul>
             </div>
         </div>
@@ -144,6 +142,10 @@
             <div class="navbar-nav">
                 <div class="nav-item text-end"><a href="https://www.ua.pt" class="nav-link">Universidade de Aveiro</a>
                 </div>
+                <label class="switch">
+                    <input class="Toggler" type="checkbox">
+                    <span class="slider round"></span>
+                </label>
             </div>
         </div>
     </nav>
@@ -154,6 +156,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.1/knockout-latest.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+    <script src="..\Scripts\myScript.js"></script>
     <script src="..\Scripts\countries.js"></script>
 </body>
 
