--- a/HTML/index.html
+++ b/HTML/index.html
@@ -70,8 +70,10 @@
                                 class="fa fa-soccer-ball-o text-primary"></i> Modalities</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="favoritos.html"><i
                                 class="fa fa-heart-o text-danger"></i> Favorites</a></li>
-                    <li class="nav-item"><button class="nav-link darkToggle">Dark</button></li>
                 </ul>
+
+
+
             </div>
         </div>
     </nav>
@@ -150,6 +152,10 @@
                         Aveiro</a>
                 </div>
             </div>
+            <input style="transform:scale(0.5)" type="checkbox" id="toggle" class="toggle--checkbox">
+            <label style="transform:scale(0.5)" for="toggle" class="toggle--label Toggler">
+                <span style="transform:scale(0.5)" class="toggle--label-background"></span>
+            </label>
         </div>
     </nav>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
