--- a/HTML/modalities.html
+++ b/HTML/modalities.html
@@ -85,8 +85,8 @@
             </div>
         </div>
         <!-- /ko -->
-        <div class="row row-cols-1 row-cols-md-4 g-4" data-bind="foreach: records">
-            <div class="col">
+        <div class="row" data-bind=" foreach: records">
+            <div class="col-md-3 col-sm-6 col-lg-3" style="margin:0 0 20px 0">
                 <div class="card h-100">
 
                     <img data-bind="attr:{src: Photo}" class="card-img-top cardImage" alt="Image Error" />
@@ -95,9 +95,16 @@
                     <div class="card-body">
                         <h5 class="card-title" data-bind="text:Name + ' ['+ Id + ']'   "></h5>
                         <p class=" card-text">
-                            This is a longer card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.
+                            Esta Modalidade é kinda meh
                         </p>
+                        <a class="btn btn-default btn-light btn-sm"
+                            data-bind="attr: { href:'./gameDetails.html?id=' + Id }">
+                            <i class="fa fa-eye" title="Selecione para ver detalhes"></i>
+                        </a>
+                        <button class="btn btn-default btn-sm">
+                            <i class="fa fa-heart-o" data-bind="attr : { 'id': 'favourite_' + Id }"
+                                title="Selecione para adicionar aos favoritos"></i>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -137,6 +144,7 @@
                 </div>
 
             </div>
+
         </div>
     </nav>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -146,6 +154,7 @@
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <script src="..\Scripts\modalities.js"></script>
+    <script src="..\Scripts\myScript.js"></script>
 </body>
 
 </html>
