--- a/HTML/competitions.html
+++ b/HTML/competitions.html
@@ -102,7 +102,7 @@
                     <th scope="col">Id</th>
                     <th scope="col">Name</th>
                     <th style="padding-left: 30px" scope="col">Photo</th>
-                    <th scope="col">Modality</th>
+                    <th style="padding-left: 15px" scope="col">Modality</th>
                     <th scope="col">Results</th>
                     <th scope="col" class="text-right"></th>
                 </tr>
@@ -113,12 +113,12 @@
                     <td class="align-middle" data-bind="text:Name"></td>
                     <td><img class="competitions-img" 
                         data-bind="attr:{src: Photo}">
-                </td>
+                    </td>
                     <td class="align-middle" data-bind="text:Modality"></td>
                     <td class="align-middle" data-bind="text:Results"></td>
-                    <td class="text-end">
+                    <td style="padding-top:40px" class="text-end">
                         <a class="btn btn-default btn-light btn-xs"
-                            data-bind="attr: { href:'./competitions.html?id=' + Id }">
+                            data-bind="attr: { href:'./competitionsDetails.html?id=' + Id }">
                             <i class="fa fa-eye" title="Selecione para ver detalhes"></i>
                         </a>
                         <button class="btn btn-default btn-xs">
