--- a/HTML/competitionsDetails.html
+++ b/HTML/competitionsDetails.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en">
 
 <head>
@@ -36,9 +36,7 @@
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="games.html"><i
                                 class="fa fa-map-marker text-success"></i> Games</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="modalities.html"><i
-                                class="fa fa-soccer-ball-o text-primary"></i> Modalities</a></li>   
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href="favoritos.html"><i
-                                class="fa fa-heart-o text-danger"></i> Favorites</a></li>
+                                class="fa fa-soccer-ball-o text-primary"></i> Modalities</a></li>
                 </ul>
             </div>
         </div>
@@ -50,7 +48,7 @@
         </div>
         <!-- ko if:Name().length > 0 -->
         <div class="row border-bottom mx-0 my-1">
-            <div class="col-2">Game Id</div>
+            <div class="col-2">Id</div>
             <div class="col-10" data-bind="text: Id"></div>
         </div>
         <div class="row border-bottom mx-0  my-1">
@@ -58,6 +56,26 @@
             <div class="col-10" data-bind="text: Name"></div>
         </div>
         <div class="row border-bottom mx-0  my-1">
+            <div class="col-2">Modality Id</div>
+            <div class="col-10" data-bind="text: Modalityid"></div>
+        </div>
+        <div class="row border-bottom mx-0  my-1">
+            <div class="col-2">Modality</div>
+            <div class="col-10" data-bind="text: Modality"></div>
+        </div>
+        <div class="row border-bottom mx-0  my-1 " >
+            <div class="col-2">Photo</div>
+            <div class="col-10" data-bind="text: Photo"></div>
+        </div>
+        <div class="row border-bottom mx-0  my-1">
+            <div class="col-2">Participant</div>
+            <div class="col-10" data-bind="text: Participant"></div>
+        </div>
+
+
+
+
+        <!-- <div class="row border-bottom mx-0  my-1">
             <div class="col-2">Country Name</div>
             <div class="col-10" data-bind="text: CountryName"></div>
         </div>
@@ -66,7 +84,7 @@
             <div class="col-10" data-bind="text: Season"></div>
         </div>
         <div class="row border-bottom mx-0  my-1">
-            <div class="col-2">Year</div>
+            <div class="col-2">Year</div>   
             <div class="col-10" data-bind="text: Year"></div>
         </div>
         <div class="row border-bottom mx-0  my-1" data-bind="visible: Logo() != '' && Logo() != null">
@@ -76,35 +94,7 @@
                 [<a class="link-dark text-decoration-none" data-bind="attr: { href: Logo }, text: Logo"
                     target="_blank"></a>]
             </div>
-        </div>
-        <div class="row border-bottom mx-0  my-1" data-bind="visible: Photo() != '' && Photo() != null">
-            <div class="col-2">Photo</div>
-            <div class="small col-10">
-                <img class="img-thumbnail" data-bind="attr:{src: Photo}"><br />
-                <i class="fa fa-link"></i> [<a class="link-dark text-decoration-none"
-                    data-bind="attr: { href: Photo }, text : Photo" target="_blank"></a>]
-            </div>
-        </div>
-        <!-- /ko -->
-        <a href="./games.html" class="btn btn-default btn-sm small"><i class="fa fa-list"></i> Back to List</a>
-        <a data-bind="attr: { href:'./gameFull.html?id=' + Id() }" class="btn btn-default btn-sm small"><i
-                class="fa fa-th"></i> Full Setails</a>
-    </div>
-    <!-- Modal -->
-    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">
-                        <img src="../images/Olympic_rings.svg" height="30" /> Loading data...
-                    </h5>
-                </div>
-                <div class="modal-body text-center">
-                    <i class="fa fa-spin fa-3x fa-refresh"></i>
-                </div>
-            </div>
-        </div>
-    </div>
+        </div> -->
     <!-- End of Work Area -->
     <nav class="navbar navbar-light bg-light fixed-bottom">
         <div class="container small">
@@ -123,7 +113,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.1/knockout-latest.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-    <script src="..\Scripts\gameDetails.js"></script>
+    <script src="..\Scripts\competitionsDetails.js"></script>
 </body>
 
 </html>
