--- a/HTML/games.html
+++ b/HTML/games.html
@@ -98,39 +98,35 @@
         </div>
         <!-- /ko -->
 
-        <table class="table table-striped table-sm small">
-            <thead class="bg-dark text-light">
-                <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Year</th>
-                    <th scope="col">City Name</th>
-                    <th scope="col">Country Name</th>
-
-                    <th scope="col" class="text-right"></th>
-                </tr>
-            </thead>
-            <tbody data-bind="foreach: records">
-                <tr>
-                    <td class="align-middle" data-bind="text:Id"></td>
-                    <td class="align-middle" data-bind="text:Name"></td>
-                    <td class="align-middle" data-bind="text:Year"></td>
-                    <td class="align-middle" data-bind="text:CityName"></td>
-                    <td class="align-middle" data-bind="text:CountryName"></td>
-                    <td class="text-end">
-                        <a class="btn btn-default btn-light btn-xs"
-                            data-bind="attr: { href:'./gameDetails.html?id=' + Id }">
-                            <i class="fa fa-eye" title="Selecione para ver detalhes"></i>
+        <div class="row" data-bind="foreach: records">
+            <div class="col-4">
+                <div class="card-deck card cardA">
+                    <div class="card-body">
+                        <a href="#" data-bind="attr: { href:'./gameDetails.html?id=' + Id }"
+                            style="text-decoration: none; color:black">
+                            <div class="row" style="margin-bottom: 10px;">
+                                <h5 class="card-title" data-bind="text:Name"></h5>
+                                <p class="card-text">
+                                    <strong>Year:</strong> <span data-bind="text:Year"></span><br>
+                                    <strong>City:</strong> <span data-bind="text:CityName"></span><br>
+                                    <strong>Country:</strong> <span data-bind="text:CountryName"></span>
+                                </p>
+                            </div>
                         </a>
-                        <button data-bind="click: () => $parent.toggleFavourite(Id), attr : { 'id': 'favourite_' + Id }"
-                            id="heartbt" class="btn btn-favourite">
+                        <a href="#" class="btn btn-primary" data-bind="attr: { href:'./gameDetails.html?id=' + Id }">
+                            View Details
+                        </a>
+                        <button class="btn btn-favourite"
+                            data-bind="click: () => $parent.toggleFavourite(Id), attr : { 'id': 'favourite_' + Id }">
                             <i data-bind="attr: {'class': $parent.favourites().includes(Id)? 'fa fa-heart' : 'fa fa-heart-o'}"
-                                class="fa fa-heart-o" title="Selecione para adicionar aos favoritos"></i>
+                                class="fa fa-heart-o"></i>
                         </button>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     </div>
     <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
