--- a/HTML/modalitiesDetails.html
+++ b/HTML/modalitiesDetails.html
@@ -10,11 +10,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap">
     <link href="\lib\bootstrap\dist\css\bootstrap.min.css" rel="stylesheet">
+    <link href="/lib/font-awesome/dist/css/font-awesome.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="..\Styles\myCSS.css" />
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html" tabindex="Olympics"><img src="../images/Olympic_rings.svg"
+            <a class="navbar-brand" href="index.html" tabindex="Olympics"><img
+                    src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Olympic_rings_without_rims.svg"
                     height="24" /></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -29,9 +32,9 @@
                                 class="fa fa-trophy"></i> Competitions</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="countries.html"><i
                                 class=" fa fa-flag-o text-danger"></i> Countries</a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="games.html"><i
+                    <li class="nav-item"><a class="nav-link " aria-current="page" href="games.html"><i
                                 class="fa fa-map-marker text-success"></i> Games</a></li>
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href="modalities.html"><i
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="modalities.html"><i
                                 class="fa fa-soccer-ball-o text-primary"></i> Modalities</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="graphics.html"><i
                                 class="fa fa-bar-chart text-primary"></i> Statistics</a></li>
@@ -43,35 +46,70 @@
             </div>
         </div>
     </nav>
+
     <!-- Work Area-->
     <div class="container">
-        <div class="py-2 border-bottom mb-3">
-            <h2 data-bind="text:Name() +' [' + Id() + ']'"></h2>
-        </div>
-        <!-- ko if:Name().length > 0 -->
-        <div class="row border-bottom mx-0 my-1">
-            <div class="col-2">Modalitie Id</div>
-            <div class="col-10" data-bind="text: Id"></div>
-        </div>
-        <div class="row border-bottom mx-0  my-1">
-            <div class="col-2">Name</div>
-            <div class="col-10" data-bind="text: Name"></div>
-        </div>
+        <div class="py-2 border-bottom mb-3 row">
+            <div class="col">
+                <h2 data-bind="text:Name()"></h2>
+            </div>
+            <div class="col pt-2" align="right"><a href="./modalities.html" class="btn btn-default btn-sm small"><i
+                        class="fa fa-list"></i>
+                    Back to List</a>
 
+            </div>
 
+        </div>
+        <div class="row">
+            <div class="col-8 lista">
+                <div class="row border-bottom mx-0 my-1 infos">
+                    <div class="col-2">Modalitie Id</div>
+                    <div class="col-10" data-bind="text: Id"></div>
+                </div>
+            </div>
+            <div class="col-8 lista">
+                <div class="row border-bottom mx-0 my-1 infos">
+                    <div class="col-2">Name</div>
+                    <div class="col-10" data-bind="text: Name"></div>
+                </div>
+            </div>
+            <div class="col-4" align="center"><a data-bind="attr: {href: Photo}"><img id="fotinha"
+                        class="img-fluid rounded" alt="..." style="max-height:565px">
+                </a></div>
+            <div class="col-8">
+                <p>Competitons:</p>
+                <table class="table table-striped table-sm small">
+                    <thead class="bg-dark text-light">
+                        <tr>
+                            <th scope="col">Id</th>
+                            <th scope="col">Name</th>
 
-        <div class="row border-bottom mx-0  my-1" data-bind="visible: Photo() != '' && Photo() != null">
-            <div class="col-2">Photo</div>
-            <div class="small col-10">
-                <img class="img-thumbnail" data-bind="attr:{src: Photo}"><br />
-                <i class="fa fa-link"></i> [<a class="link-dark text-decoration-none"
-                    data-bind="attr: { href: Photo }, text : Photo" target="_blank"></a>]
+                            <th scope="col">Results</th>
+                            <th scope="col">Photo</th>
+                            <th scope="col" class="text-right"></th>
+                        </tr>
+                    </thead>
+                    <tbody data-bind="foreach:Modalities">
+                        <tr>
+                            <td class="align-middle">
+                                <p data-bind="text: Id"></p>
+                            </td>
+                            <td class="align-middle" data-bind="text: Name"></td>
+                            <td class="align-middle" data-bind="text: Results"></td>
+                            <td>
+                                <a href="" style="text-decoration:none; color:black"
+                                    data-bind="attr: {href:'./gameDetails.html?id=' + Id }"> <img class="img-thumbnail"
+                                        data-bind="attr:{src: Photo}" style="width:60px;border-radius:100%" />
+                                </a>
+                            </td>
+                            <td class="text-end">
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
         <!-- /ko -->
-        <a href="./games.html" class="btn btn-default btn-sm small"><i class="fa fa-list"></i> Back to List</a>
-        <a data-bind="attr: { href:'./gameFull.html?id=' + Id() }" class="btn btn-default btn-sm small"><i
-                class="fa fa-th"></i> Full Setails</a>
     </div>
     <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
